@@ -1,3 +1,4 @@
+import org.hidetake.gradle.swagger.generator.GenerateSwaggerUI
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
@@ -9,12 +10,6 @@ plugins {
     /** spring */
     id("org.springframework.boot") version DependencyVersion.SPRING_BOOT
     id("io.spring.dependency-management") version DependencyVersion.SPRING_DEPENDENCY_MANAGEMENT
-
-    /** jooq */
-    id("org.jooq.jooq-codegen-gradle") version DependencyVersion.JOOQ
-
-    /** ktlint */
-    id("org.jlleitschuh.gradle.ktlint") version DependencyVersion.KTLINT
 
     /** docs */
     id("org.asciidoctor.jvm.convert") version DependencyVersion.ASCIIDOCTOR
@@ -32,6 +27,47 @@ allprojects {
 
     repositories {
         mavenCentral()
+        maven("https://maven.vaadin.com/vaadin-addons")
+    }
+
+    val ktlint by configurations.creating
+
+    dependencies {
+        ktlint("com.pinterest.ktlint:ktlint-cli:${DependencyVersion.PINTEREST_KTLINT}") {
+            attributes {
+                attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+            }
+        }
+    }
+
+    val ktlintCheck by tasks.registering(JavaExec::class) {
+        group = LifecycleBasePlugin.VERIFICATION_GROUP
+        description = "Check Kotlin code style"
+        classpath = ktlint
+        mainClass.set("com.pinterest.ktlint.Main")
+        args(
+            "**/src/**/*.kt",
+            "**.kts",
+            "!**/build/**",
+        )
+    }
+
+    tasks.check {
+        dependsOn(ktlintCheck)
+    }
+
+    tasks.register<JavaExec>("ktlintFormat") {
+        group = LifecycleBasePlugin.VERIFICATION_GROUP
+        description = "Check Kotlin code style and format"
+        classpath = ktlint
+        mainClass.set("com.pinterest.ktlint.Main")
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        args(
+            "-F",
+            "**/src/**/*.kt",
+            "**.kts",
+            "!**/build/**",
+        )
     }
 
     tasks.withType<KotlinCompile> {
@@ -68,9 +104,9 @@ subprojects {
     apply(plugin = "io.spring.dependency-management")
     apply(plugin = "org.jetbrains.kotlin.plugin.allopen")
     apply(plugin = "org.jetbrains.kotlin.kapt")
-    apply(plugin = "org.jlleitschuh.gradle.ktlint")
     apply(plugin = "org.hidetake.swagger.generator")
-    apply(plugin = "org.jooq.jooq-codegen-gradle")
+    apply(plugin = "org.asciidoctor.jvm.convert")
+    apply(plugin = "com.epages.restdocs-api-spec")
 
     /**
      * https://kotlinlang.org/docs/reference/compiler-plugins.html#spring-support
@@ -80,6 +116,9 @@ subprojects {
      * jpa meta-annotations not automatically opened through the default settings of the plugin.spring
      */
     allOpen {
+        annotation("jakarta.persistence.Entity")
+        annotation("jakarta.persistence.MappedSuperclass")
+        annotation("jakarta.persistence.Embeddable")
     }
 
     dependencyManagement {
@@ -89,16 +128,24 @@ subprojects {
              * But jooq-codegen-gradle need over 3.19.0.
              *  */
             dependency("org.jooq:jooq:${DependencyVersion.JOOQ}")
+            imports {
+                mavenBom("org.springframework.modulith:spring-modulith-bom:${DependencyVersion.SPRING_MODULITH}")
+                mavenBom("com.vaadin:vaadin-bom:${DependencyVersion.VAADIN}")
+                mavenBom("org.springframework.cloud:spring-cloud-dependencies:2023.0.4")
+            }
         }
     }
 
     dependencies {
         /** spring starter */
         implementation("org.springframework.boot:spring-boot-starter-validation")
+        implementation("org.springframework.boot:spring-boot-starter-web")
+        implementation("org.springframework.modulith:spring-modulith-starter-core")
         kapt("org.springframework.boot:spring-boot-configuration-processor")
 
         /** kotlin */
         implementation("org.jetbrains.kotlin:kotlin-reflect")
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core")
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-slf4j")
         implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
         implementation("io.projectreactor.kotlin:reactor-kotlin-extensions")
@@ -107,117 +154,98 @@ subprojects {
         /** test **/
         testImplementation("org.springframework.boot:spring-boot-starter-test")
         testImplementation("io.mockk:mockk:${DependencyVersion.MOCKK}")
+        testImplementation("com.tngtech.archunit:archunit-junit5:${DependencyVersion.ARCH_UNIT_JUNIT5}")
+        testImplementation("org.springframework.modulith:spring-modulith-starter-test")
+        testImplementation("io.qameta.allure:allure-junit5:${DependencyVersion.ALLURE_JUNIT5}")
 
         /** kotest */
         testImplementation("io.kotest:kotest-runner-junit5:${DependencyVersion.KOTEST}")
         testImplementation("io.kotest:kotest-assertions-core:${DependencyVersion.KOTEST}")
+        testImplementation("io.kotest:kotest-framework-api:${DependencyVersion.KOTEST}")
         testImplementation("io.kotest.extensions:kotest-extensions-spring:${DependencyVersion.KOTEST_EXTENSION}")
         testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:${DependencyVersion.COROUTINE_TEST}")
+        testImplementation("io.kotest.extensions:kotest-extensions-allure:${DependencyVersion.KOTEST_EXTENSION}")
 
         /** Kotlin Logger **/
         implementation("io.github.oshai:kotlin-logging-jvm:${DependencyVersion.KOTLIN_LOGGING}")
+
+        /** apache common */
+        implementation("org.apache.commons:commons-lang3:${DependencyVersion.COMMONS_LANG3}")
+
+        /** swagger ui */
+        swaggerUI("org.webjars:swagger-ui:${DependencyVersion.SWAGGER_UI}")
     }
 
-    /** copy data migration */
-    tasks.create("copyDataMigration") {
-        doLast {
-            val root = rootDir
-            val flyWayResourceDir = "/db/migration/entity"
-            val dataMigrationDir = "$root/data/$flyWayResourceDir"
-            File(dataMigrationDir).walkTopDown().forEach {
-                if (it.isFile) {
-                    it.copyTo(
-                        File("${project.projectDir}/src/main/resources$flyWayResourceDir/${it.name}"),
-                        true
-                    )
-                }
-            }
+    kapt {
+        includeCompileClasspath = false
+    }
+
+    tasks {
+        test {
+            useJUnitPlatform()
+            systemProperty("allure.results.directory", "$projectDir/build/allure-results")
         }
     }
 
-    jooq {
-        configuration {
-            generator {
-                database {
-                    name = "org.jooq.meta.extensions.ddl.DDLDatabase"
-                    properties {
-                        // Specify the location of your SQL script.
-                        // You may use ant-style file matching, e.g. /path/**/to/*.sql
-                        //
-                        // Where:
-                        // - ** matches any directory subtree
-                        // - * matches any number of characters in a directory / file name
-                        // - ? matches a single character in a directory / file name
-                        property {
-                            key = "scripts"
-                            value = "src/main/resources/db/migration/**/*.sql"
-                        }
-
-                        // The sort order of the scripts within a directory, where:
-                        //
-                        // - semantic: sorts versions, e.g. v-3.10.0 is after v-3.9.0 (default)
-                        // - alphanumeric: sorts strings, e.g. v-3.10.0 is before v-3.9.0
-                        // - flyway: sorts files the same way as flyway does
-                        // - none: doesn't sort directory contents after fetching them from the directory
-                        property {
-                            key = "sort"
-                            value = "flyway"
-                        }
-
-                        // The default schema for unqualified objects:
-                        //
-                        // - public: all unqualified objects are located in the PUBLIC (upper case) schema
-                        // - none: all unqualified objects are located in the default schema (default)
-                        //
-                        // This configuration can be overridden with the schema mapping feature
-                        property {
-                            key = "unqualifiedSchema"
-                            value = "none"
-                        }
-
-                        // The default name case for unquoted objects:
-                        //
-                        // - as_is: unquoted object names are kept unquoted
-                        // - upper: unquoted object names are turned into upper case (most databases)
-                        // - lower: unquoted object names are turned into lower case (e.g. PostgreSQL)
-                        property {
-                            key = "defaultNameCase"
-                            value = "as_is"
-                        }
-                    }
-                }
-
-                generate {
-                    isDeprecated = false
-                    isRecords = true
-                    isImmutablePojos = true
-                    isFluentSetters = true
-                    isJavaTimeTypes = true
-                }
-
-                target {
-                    packageName = "jooq.jooq_dsl"
-                    directory = "src/generated"
-                    encoding = "UTF-8"
-                }
+    /** server url */
+    val serverUrl =
+        project.hasProperty("serverUrl").let {
+            if (it) {
+                project.property("serverUrl") as String
+            } else {
+                "http://localhost:8080"
             }
         }
+
+    /** convert snippet to swagger */
+    openapi3 {
+        this.setServer(serverUrl)
+        title = project.name
+        version = project.version.toString()
+        format = "yaml"
+        snippetsDirectory = "build/generated-snippets/"
+        outputDirectory = "src/main/resources/static"
+        outputFileNamePrefix = "openapi3"
+    }
+
+    /** convert snippet to postman */
+    postman {
+        title = project.name
+        version = project.version.toString()
+        baseUrl = serverUrl
+        outputDirectory = "src/main/resources/static"
+        outputFileNamePrefix = "postman"
+    }
+
+    /** generate swagger ui */
+    swaggerSources {
+        register(project.name) {
+            setInputFile(file("$projectDir/src/main/resources/static/openapi3.yaml"))
+        }
+    }
+
+    /**
+     * generate static swagger ui <br/>
+     * need snippet to generate swagger ui
+     * */
+    tasks.register("generateStaticSwaggerUI", Copy::class) {
+        val name = project.name
+        val generateSwaggerUITask = "generateSwaggerUI${name.first().uppercase() + name.substring(1)}"
+        dependsOn(generateSwaggerUITask)
+
+        val generateSwaggerUISampleTask = tasks.named(generateSwaggerUITask, GenerateSwaggerUI::class).get()
+        from(generateSwaggerUISampleTask.outputDir)
+        into("$projectDir/src/main/resources/static/docs/${project.name}/swagger-ui")
+    }
+
+    tasks.register("allureReport", Copy::class) {
+        group = "documentation"
+
+        from("$projectDir/build/allure-results")
+        into("$rootDir/allure-results")
     }
 
     defaultTasks("bootRun")
-}
-
-/** do all copy data migration */
-tasks.register("copyDataMigrationAll") {
-    dependsOn(":api-repo:copyDataMigration")
-    dependsOn(":batch:copyDataMigration")
-}
-
-/** do all jooq codegen */
-tasks.register("jooqCodegenAll") {
-    dependsOn("copyDataMigrationAll")
-    dependsOn(":api-repo:jooqCodegen")
-    dependsOn(":batch:jooqCodegen")
 }
 
 /** git hooks */
